--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+  
+  <footer>
+    <p>&copy; 2016 Random Design Co.</p>
+  </footer>
+
 </body>
 
 </html>
