--- a/index.html
+++ b/index.html
@@ -22,7 +22,43 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world!</p>
+  <header>
+  </header>
+  <section class="about-us">
+  </section>
+  <section class="latest-work">
+  </section>
+
+RANDOM DESIGN CO.
+
+--
+
+BE RANDOM
+
+OMG YES!
+
+--
+
+ABOUT US
+
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!
+
+--
+
+LATEST WORK
+
+PROJECT 1
+PROJECT 2
+PROJECT 3
+PROJECT 4
+PROJECT 5
+PROJECT 6
+PROJECT 7
+
+  <footer>
+      <p>&copy; 2016 Random Design Co.</p>
+  </footer>
+
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
@@ -35,11 +71,6 @@
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async defer></script>
-  
-  <footer>
-    <p>&copy; 2016 Random Design Co.</p>
-  </footer>
-
 </body>
 
 </html>
