Updated page header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
-
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -22,38 +22,32 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <header>
+  <header class="page-header">
+    <h1>RANDOM DESIGN CO.</h1>
+    <i class="fas fa-bars"></i>
   </header>
-  <section class="about-us">
-  </section>
-  <section class="latest-work">
-  </section>
 
-RANDOM DESIGN CO.
+  <div class="main-content">
+    <section class="be-random">
+      BE RANDOM
 
---
-
-BE RANDOM
-
-OMG YES!
-
---
-
-ABOUT US
-
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!
-
---
-
-LATEST WORK
-
-PROJECT 1
-PROJECT 2
-PROJECT 3
-PROJECT 4
-PROJECT 5
-PROJECT 6
-PROJECT 7
+      OMG YES!
+    </section>
+    <section class="about-us">
+      <h2>ABOUT US</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!</p>
+    </section>
+    <section class="latest-work">
+      <h2>LATEST WORK</h2>
+      <article class="projects">PROJECT 1</article>
+      <article class="projects">PROJECT 2</article>
+      <article class="projects">PROJECT 3</article>
+      <article class="projects">PROJECT 4</article>
+      <article class="projects">PROJECT 5</article>
+      <article class="projects">PROJECT 6</article>
+      <article class="projects">PROJECT 7</article>
+    </section>
+  </div>
 
   <footer>
       <p>&copy; 2016 Random Design Co.</p>
