Updated changes CSS and HTML
Changed div to section for bold-info, adjusted z-index for bold-background image, and changed hover for project content

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
   </header>
   
   <div class="main-content">
-    <div class="bold-info">
+    <section class="bold-info">
       <div class="bold-content">
         <h2>BE RANDOM</h2>
         <a href="#">OMG YES!</a>
       </div>
       <img class="bold-background" src="img/purple-bg.jpeg" alt="purple background">
-    </div>
+    </section>
 
     <section class="about-us">
       <h2>ABOUT US</h2>
